--- a/index.html
+++ b/index.html
@@ -37,9 +37,13 @@
         </style>
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        <!--  Menu Superior -->
+        <ul>
+            <li><a class="active" href="https://lojamodafeminina.github.io/ModaFeminina/">Home</a></li>
+            <li><a href="https://lojamodafeminina.github.io/catalogo/">News</a></li>
+            <li><a href="https://lojamodafeminina.github.io/produtos/">Contact</a></li>
+            <li><a href="#about">About</a></li>
+          </ul>
         
         <script src="" async defer></script>
     </body>
