--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <body>
         <!--  Menu Superior -->
         <ul>
-            <li><a class="active" href="https://lojamodafeminina.github.io/ModaFeminina/">Home</a></li>
-            <li><a href="https://lojamodafeminina.github.io/catalogo/">News</a></li>
-            <li><a href="https://lojamodafeminina.github.io/produtos/">Contact</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a class="active" href="https://lojamodafeminina.github.io/ModaFeminina/">Início</a></li>
+            <li><a href="https://lojamodafeminina.github.io/catalogo/">Catalogo</a></li>
+            <li><a href="https://lojamodafeminina.github.io/produtos/">Produtos</a></li>
+            <li><a href="https://lojamodafeminina.github.io/contato/">Contato</a></li>
           </ul>
         
         <script src="" async defer></script>
