--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
   }
         </style>
     </head>
-    <body>
+        <body>
         <!--  Menu Superior -->
         <ul>
             <li><a class="active" href="https://lojamodafeminina.github.io/ModaFeminina/">Início</a></li>
             <li><a href="https://lojamodafeminina.github.io/catalogo/">Catalogo</a></li>
             <li><a href="https://lojamodafeminina.github.io/produtos/">Produtos</a></li>
+            <li><a href="https://lojamodafeminina.github.io/feedback/">FeedBack</a></li>
             <li><a href="https://lojamodafeminina.github.io/contato/">Contato</a></li>
           </ul>
         
